--- a/jammming/package.json
+++ b/jammming/package.json
@@ -2,6 +2,7 @@
   "name": "jammming",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://derektypist.github.io/jammming",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
